Fix overflow issue in mobile browsers

--- a/src/css/index/base/reset.scss
+++ b/src/css/index/base/reset.scss
@@ -6,6 +6,7 @@
 
 html {
     box-sizing: border-box;
+    overflow-x: hidden; //Needed on both html and body - issue due to mobile browers
 }
 
 p,
